--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
   /* height: 100vh; */
   z-index: 0;
   background-repeat: no-repeat;
-  background-image: url(../img/bee.jpg);
+  background-image: url(../img/XINJJ.png);
   background-size: cover;
   background-position: 50%;
   -webkit-filter: blur(4px);
